--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,21 +9,28 @@
         android:id="@+id/btn_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="启动服务"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:text="启动服务" />
 
     <Button
         android:id="@+id/btn_white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="跳转自启动管理"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:text="跳转自启动管理" />
 
     <Button
         android:id="@+id/btn_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="停止服务"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:text="停止服务" />
+
+    <Button
+        android:id="@+id/btn_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="测试" />
 
 </LinearLayout>
